# young1ll-plugins

./: README.md
.claude-plugin/: marketplace.json
.github/workflows/: pm-e2e-tests.yml
plugins/pm/: README.md  SIMPLIFICATION_PLAN.md  package-lock.json  package.json  tsconfig.json
plugins/pm/.claude-plugin/: mcp.json  plugin.json
plugins/pm/agents/: milestone-tracker.md  project-analyzer.md
plugins/pm/commands/: adopt.md  help.md  init.md  new-plan.md  new-report.md  status.md  sync.md  validate.md
plugins/pm/docs/: LEVEL_2.md  LEVEL_3.md
plugins/pm/hooks/: hooks.json
plugins/pm/ml/: README.md  pyproject.toml
plugins/pm/ml/pm_ml/: __init__.py  __main__.py  server.py
plugins/pm/ml/pm_ml/analysis/: __init__.py  hotspots.py  patterns.py
plugins/pm/ml/pm_ml/db/: __init__.py  sqlite.py
plugins/pm/ml/pm_ml/estimation/: __init__.py  features.py  model.py
plugins/pm/skills/pm/: SKILL.md
plugins/pm/skills/pm/references/: init-guide.md
plugins/pm/skills/pm/references/schemas/: project.schema.yaml
plugins/pm/skills/pm/references/templates/: API_SPEC.md.tpl  ARCHITECTURE.md.tpl  DATA_SCHEMA.md.tpl  DECISIONS.md.tpl  DOMAIN_MODEL.md.tpl  EXPERIMENTS.md.tpl  MANIFESTO.md.tpl  METRICS.md.tpl  MILESTONES.md.tpl  PLAN.md.tpl  REPORT.md.tpl
plugins/pm/skills/pm/scripts/: pm
plugins/pm/skills/pm/scripts/lib/: common.sh  yaml-parser.sh
plugins/pm/storage/: schema.sql
plugins/pm/tests/e2e/config/: env.ts
plugins/pm/tests/e2e/github/: issue.e2e.test.ts
plugins/pm/tests/e2e/integration/: github-task-sync.e2e.test.ts
